--- a/src/app/words/pages/new-words/new-words.component.html
+++ b/src/app/words/pages/new-words/new-words.component.html
@@ -1,85 +1,77 @@
 <div class="container mt-5">
 
   <h3>Añadir nueva palabra</h3>
-  <form class="row g-3">
+  <form class="row g-3" (ngSubmit)="handlerAddWords(formWord)" #formWord='ngForm'>
     <div class="col-md-4 col-lg-6">
       <label for="word" class="form-label">Palabra</label>
-      <input type="text" class="form-control " [ngClass]="{'is-invalid': !isValidInput.word.isValid, 'is-valid': addWords.word }"
-       id="word" [(ngModel)]="addWords.word" name="word">
-
-      
-      <div class="invalid-feedback" *ngIf="!isValidInput.word.isValid">
-
-        <ul>
-          <li  *ngFor="let messageError of isValidInput.word.messagesError">
-            {{messageError}}
-          </li>
-        </ul>
-
-      </div>
+      <input type="text" class=" form-control" 
+       id="word" [(ngModel)]="addWords.word" name="word"  required minlength="3">
+    <span class="form-text text-danger" *ngIf="formWord.controls.word?.invalid &&  formWord.controls.word?.touched">
+      Debe Ingresar una palabra
+    </span>
     </div>
     <div class="col-md-4 col-lg-6">
       <label for="wordSpanish" class="form-label">Traducción</label>
       <input type="text" class="form-control " 
-      [ngClass]="{'is-invalid': !isValidInput.wordSpanish.isValid, 'is-valid': addWords.wordSpanish }"
       id="wordSpanish" [(ngModel)]="addWords.wordSpanish"
-        name="wordSpanish">
-        <!-- <div class="invalid-feedback" *ngIf="!isValidInput.wordSpanish.isValid">
-          <ul>
-            <li  *ngFor="let messageError of isValidInput.wordSpanish.messagesError">
-              {{messageError}}
-            </li>
-          </ul>
-  
-        </div> -->
+        name="wordSpanish" required minlength="3">
+        <span class="form-text text-danger"  
+         *ngIf="formWord.controls.wordSpanish?.invalid &&  formWord.controls.wordSpanish?.touched"
+        >
+          Debe Ingresar una Traducción
+        </span>
     </div>
 
     <div class="col-md-4 col-lg-6">
       <label for="lenguajes" class="form-label">Lenguaje</label>
-      <select class="form-select is-invalid" id="validationServer04" id="lenguajes" name="lenguajes"
-        aria-describedby="validationServer04Feedback" [(ngModel)]="addWords.lenguajes" required>
+      <select class="form-select " id="validationServer04" id="lenguajes" name="lenguajes"
+        aria-describedby="validationServer04Feedback"
+         [(ngModel)]="addWords.lenguajes " required >
         <option selected disabled value="">--Seleccione una categoría--</option>
         <option value="ingles">Ingles</option>
         <option value="portugues">Portugues</option>
       </select>
-      <div id="validationServer04Feedback" class="invalid-feedback">
-        Please select a valid state.
-      </div>
+      <span class="form-text text-danger" *ngIf="formWord.controls.lenguajes?.invalid &&  formWord.controls.lenguajes?.touched">
+        Debe seleccionar un Lenguaje
+      </span>
     </div>
 
     <div class="col-md-4 col-lg-6">
       <label for="category" class="form-label">Categoría</label>
-      <input type="text" class="form-control is-valid" id="category" name="category"
-        (keyup.enter)="addCategory($event)">
+      <input type="text" class="form-control" id="category" name="category"
+        (input)="CategoriasSugeridas(category)">
 
+        <ul class="list-group">
+          <li  class='list-group-item list-group-item-action'  *ngFor="let item of listCategorySugerido"
+            (click)="insertCategory(item)">
+             {{item.category}}</li>
+        </ul>
 
       <ul>
-        <li *ngFor="let item of listCategory">{{item}}</li>
+        <li *ngFor="let item of listCategorySelected">{{item.category}}</li>
       </ul>
     </div>
 
     <div class="col-md-4 col-lg-6">
       <label for="level" class="form-label">Nivel</label>
-      <input type="text" class="form-control is-valid" id="level" [(ngModel)]="addWords.level" name="category">
-      <div class="valid-feedback">
-        Looks good!
-      </div>
+      <input type="text" class="form-control " id="level" [(ngModel)]="addWords.level" name="level" minlength="3" required>
+      <span class="form-text text-danger" *ngIf="formWord.controls.level?.invalid &&  formWord.controls.level?.touched">
+        Debe Ingresar un Nivel
+      </span>
     </div>
 
     <div class="mb-3 col-md-6">
       <label for="validationServer05" class="form-label">Seleccione una imagen</label>
 
       <input type="file" class="form-control" aria-label="Seleccione una imagen" required>
-      <div class="invalid-feedback">Example invalid form file feedback</div>
     </div>
     <div class="mb-3 col-md-6">
       <label for="validationServer05" class="form-label">Seleccione una audio</label>
 
       <input type="file" class="form-control" aria-label="Seleccione una imagen" required>
-      <div class="invalid-feedback">Example invalid form file feedback</div>
     </div>
     <div class="col-12">
-      <button class="btn btn-primary" type="submit" (onclick)="handlerAddWords" >Agregar</button>
+      <button class="btn btn-primary" >Agregar</button>
     </div>
   </form>
 </div>
