--- a/src/app/words/pages/list-words/list-words.component.html
+++ b/src/app/words/pages/list-words/list-words.component.html
@@ -6,9 +6,11 @@
 
     </div>
 
-    <div class="col-2 align-self-end">
-      <button type="button" class="btn  btn-light">
-        <img src="../../../../assets/images/icon_add.png" alt="agregar" width="25" height="25"> 
+    <div class="col-2 align-self-end" >
+      <button (click)="goToNewWord()" type="button" class="btn  btn-light">
+        <img src="../../../../assets/images/icon_add.png" alt="agregar" width="25" height="25"
+        
+        > 
         Agregar
       </button>
     </div>
@@ -33,8 +35,8 @@
               <td>{{word.word}}</td>
               <td>{{word.word}}</td>
               <td>{{word.wordSpanish}}</td>
-              <td><img src="../../../../assets/images/icon_pencil.png" width="25" height="25" alt="editar">
-                <img src="../../../../assets/images/icon_trash.png" width="25" height="25" alt="editar">
+              <td><img src="../../../../assets/images/icon_pencil.png" (click)="goToEditWord(word._id)"  width="25" height="25" alt="editar">
+                <img src="../../../../assets/images/icon_trash.png" (click)="showModal(word)" width="25" height="25" alt="editar">
               </td>
 
             </tr>
@@ -46,4 +48,14 @@
   </div>
 
  
+</div>
+
+
+<div class="modal" *ngIf="isVisibleModal">
+  <button class="close-button" (click)="closeModal()">&#10005;</button>
+  <div class="modal-content">
+    <p>¿Estás seguro?</p>
+    <button (click)="deleteWord()">Sí</button>
+    <button (click)="closeModal()">No</button>
+  </div>
 </div>
