Nueva estructura en rutas para admin  y public

--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -18,8 +18,8 @@ data-bs-theme="dark">
             Words
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" routerLink="/words/list-words">Listado de palabras</a></li>
-            <li><a class="dropdown-item" routerLink="/words/new-words">Agregar palabras</a></li>
+            <li><a class="dropdown-item" routerLink="admin/words/list-words">Listado de palabras</a></li>
+            <li><a class="dropdown-item" routerLink="admin/words/new-words">Agregar palabras</a></li>
           </ul>
         </li>
         <li class="nav-item">
