--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -20,6 +20,7 @@ data-bs-theme="dark">
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" routerLink="/words/list-words">Listado de palabras</a></li>
             <li><a class="dropdown-item" routerLink="/words/new-words">Agregar palabras</a></li>
+            <li><a class="dropdown-item" routerLink="/words/listen-to-words">Escuchar</a></li>
           </ul>
         </li>
         <li class="nav-item">
