--- a/src/app/words/pages/list-words/list-words.component.html
+++ b/src/app/words/pages/list-words/list-words.component.html
@@ -59,3 +59,11 @@
     <button (click)="closeModal()">No</button>
   </div>
 </div>
+
+<!-- <app-alert-question [confirmCallback]="deleteWord" [cancelCallback]="closeModal"></app-alert-question> -->
+
+
+<!-- <app-alert-question [message]="'¿Estás seguro de eliminar esta palabra?'"
+                    [confirmCallback]="deleteWord"
+                    [cancelCallback]="null"></app-alert-question> -->
+
