--- a/src/app/words/pages/new-words/new-words.component.html
+++ b/src/app/words/pages/new-words/new-words.component.html
@@ -2,7 +2,7 @@
 
   <h3>Añadir nueva palabra</h3>
 
-  <form class="row g-3" (ngSubmit)="createWord(formWord)" #formWord='ngForm'>
+  <form class="row g-3"  #formWord='ngForm'>
     <div class="col-md-4 col-lg-6">
       <label for="word" class="form-label">Palabra</label>
       <input type="text" class=" form-control" 
@@ -73,9 +73,20 @@
   <div *ngIf="audioErrorMsg" class="text-danger">{{ audioErrorMsg }}</div>
 </div>
     
-    <div class="col-12">
-      <button class="btn btn-primary" [disabled]="!isValidForm" >Agregar</button>
+    <!-- <div class="col-12" *ngIf="!wordId"></div>>
+      <button class="btn btn-primary" [disabled]="!isValidForm" (click)="createWord()" >Agregar</button>
+    </div> -->
+
+    <div class="col-12" *ngIf="!wordId">
+      <button class="btn btn-primary" [disabled]="!isValidForm" (click)="createWord()"  >Crear</button>
     </div>
+
+
+    <div class="col-12" *ngIf="wordId">
+      <button class="btn btn-primary" [disabled]="!isValidForm" (click)="editWord()"  >Editar</button>
+    </div>
+
+    
   </form>
 </div>
 
