inicio componenete de iniciar palabras - 2

--- a/src/app/private/admin/words/pages/generate-listen-words/generate-listen-words.component.html
+++ b/src/app/private/admin/words/pages/generate-listen-words/generate-listen-words.component.html
@@ -37,7 +37,7 @@
             <span>{{ item }}</span>
             <span *ngIf="isSelected(item)">✔</span>
           </li>
-          <li *ngIf="category.length == 0">
+          <li *ngIf="category?.length == 0">
             No hay elementos que coincidan con la búsqueda.
           </li>
         </ul>
