se finaliza diseño de login y register

--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -8,7 +8,7 @@ data-bs-theme="dark">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/words/list-words">Inicio</a>
+          <a class="nav-link active" aria-current="page" routerLink="log-in">Inicio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/frases/listado">Frases</a>
@@ -23,7 +23,7 @@ data-bs-theme="dark">
             <li><a class="dropdown-item" routerLink="admin/words/new-words">Agregar palabras</a></li>
 
             <li><a class="dropdown-item" routerLink="admin/words/listen-to-words">Escuchar</a></li>
-
+          
           </ul>
         </li>
         <li class="nav-item">
