--- a/src/app/public/auth/log-in/log-in.component.html
+++ b/src/app/public/auth/log-in/log-in.component.html
@@ -1,3 +1,24 @@
-<p>
-  log-in works!
-</p>
+<div>
+
+  <div class="login">
+    <h1 class="login_title">Inicio de Sesión</h1>
+    <form class="login_form">
+
+      <div class="inputGroup">
+        <label>Correo:</label>
+        <input class="inputGroup_input" 
+        type="email" autocomplete="off" placeholder="Ingrese su usuario" [(ngModel)]="user.email" name="email" />
+      </div>
+      <div class="inputGroup">
+        <label>Contraseña:</label>
+        <input class="inputGroup_input" type="password" placeholder="Ingrese su contraseña"  name="password"
+        [(ngModel)]="user.password" />
+      </div>
+
+      <button class="login_btn btn_outline" type="submit" (click)="handlerLogin">Ingresar</button>
+
+      <a class="login_link" (click)="openRegister()" >¿No tienes cuenta? Ingresa Aquí</a>
+    </form>
+  </div>
+
+</div>
