--- a/src/app/public/auth/register/register.component.html
+++ b/src/app/public/auth/register/register.component.html
@@ -1,3 +1,36 @@
-<p>
-  register works!
-</p>
+<div>
+
+  <div class="login">
+    <h1 class="login_title">Registro</h1>
+    <form class="login_form">
+
+
+      
+      <div class="inputGroup">
+        <label>Nombre:</label>
+        <input class="inputGroup_input" 
+        type="text" autocomplete="off" placeholder="Ingrese sus Nombres" name="name" [(ngModel)]="user.name" />
+      </div>
+      <div class="inputGroup">
+        <label>Correo:</label>
+        <input class="inputGroup_input" 
+        type="email" autocomplete="off" placeholder="Ingrese su usuario"  name="email" [(ngModel)]="user.email"/>
+      </div>
+      <div class="inputGroup">
+        <label>Contraseña:</label>
+        <input class="inputGroup_input" type="password" placeholder="Ingrese su contraseña"  name="password" [(ngModel)]="user.password"/>
+      </div>
+
+      <div class="inputGroup">
+        <label>Confirmar Contraseña:</label>
+        <input class="inputGroup_input" type="password" placeholder="Confirme su contraseña"  name="passwordTwo" [(ngModel)]="user.passwordTwo"/>
+      </div>
+
+
+      <button class="login_btn btn_outline" type="submit">Registrarse</button>
+
+      <a class="login_link" (click)="openLogin()" >¿Ya tienes cuenta? Ingresa Aquí</a>
+    </form>
+  </div>
+
+</div>
